force-app/main/default/objects/Parent1__c/Parent1__c.object-meta.xml
<CustomObject>
    <label>Parent1</label>
    <nameField>
        <label>Parent1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>parents1</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>