force-app/main/default/objects/Parent1__c/fields/Above_1000__c.field-meta.xml
<CustomField>
    <fullName>Above_1000__c</fullName>
    <label>Above_1000</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>